[package]
name = "order-66"
version = "0.1.0"
edition = "2021"
description = "Schedule file deletions and manage via Telegram bot."
authors = ["Ömer Üstün <omerbustun@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/omerbustun/order-66"
keywords = ["file", "deletion", "schedule", "telegram", "bot"]
categories = ["command-line-utilities"]
include = ["src/**/*", "Cargo.*", "LICENSE", "README.md"]

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
